--- a/rf_model.ipynb
+++ b/rf_model.ipynb
@@ -52,7 +52,7 @@
     "rf_model = Pipeline([\n",
     "    ('scaler', StandardScaler()),  \n",
     "    ('smote', SMOTE(sampling_strategy='auto', random_state=42)),  \n",
-    "    ('rf', RandomForestClassifier(n_estimators=500, min_samples_split=5, min_samples_leaf=1, max_depth=None, random_state=42))  \n",
+    "    ('rf', RandomForestClassifier(n_estimators= 300, min_samples_split= 5, min_samples_leaf= 2, max_depth= 10, bootstrap= False, random_state=42))  \n",
     "])"
    ]
   },
